[package]
name = "bevy_piet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piet_render = { path = "bevy_piet_render" }

[patch.crates-io]
# Required for metal support to work on wgpu
# TODO: remove when wgpu is upgraded to 0.15
naga = { git = "https://github.com/gfx-rs/naga", rev="ddcd5d3121150b2b1beee6e54e9125ff31aaa9a2" }

[dev-dependencies]
bevy = {version ="0.9" }
pollster = "0.2.5"

[[example]]
name = "render"
path = "example/render_to_png.rs"

[package.metadata.example.button_ui]
name = "Render to Png"
description = "Generete Png file with render"
category = "2D Rendering"

[[example]]
name = "compute_shader"
path = "example/compute_shader_piet.rs"

[package.metadata.example.compute_shader_piet]
name = "Compute Shaders - Piet"
description = "Custom piet compute"
category = "Shaders"