[package]
name = "bevy_vello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_vello_render = { path = "bevy_vello_render" }

[patch.crates-io]
# Required for metal support to work on wgpu
# TODO: remove when wgpu is upgraded to 0.15
naga = { git = "https://github.com/gfx-rs/naga", rev="ddcd5d3121150b2b1beee6e54e9125ff31aaa9a2" }

[dev-dependencies]
bevy = {version ="0.9" }
pollster = "0.2.5"


[[example]]
name = "compute_shader"
path = "example/compute_shader_piet.rs"

[package.metadata.example.compute_shader_piet]
name = "Compute Shaders - Piet"
description = "Custom piet compute"
category = "Shaders"