[package]
name = "bevy_piet_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version ="0.9", default-features = false }
piet-wgsl = { git = "https://github.com/linebender/piet-gpu.git", rev= "571822248c92a5e57761ef29391638c5ff942cd7"}
wgpu = "0.14"
png = "0.17.6"
bytemuck = { version = "1.12.1", features = ["derive"] }